--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,17 +70,17 @@
                                     <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
                                 </a>
                                 &nbsp;&nbsp;
-                                <a href="https://twitter.com/rustinact" target="_blank" style="text-decoration: none;">
+                                <a href="https://twitter.com/scalainaction" target="_blank" style="text-decoration: none;">
                                     <span style="color:#000000; font-size: 25px;">
                                         <i class="fa-brands fa-x-twitter"></i>
                                     </span>
                                 </a>
-                                <a href="https://www.instagram.com/rustinaction" target="_blank" style="text-decoration: none;">
+                                <a href="https://www.instagram.com/scalainaction/" target="_blank" style="text-decoration: none;">
                                     <span style="color:#000000; font-size: 25px;">
                                         <i class="fa-brands fa-square-instagram"></i>
                                     </span>
                                 </a> 
-                                <a href="https://github.com/rustinact?tab=repositories" target="_blank" style="text-decoration: none;">
+                                <a href="https://github.com/scalainact?tab=repositories" target="_blank" style="text-decoration: none;">
                                     <span style="color:#000000; font-size: 25px;">
                                         <i class="fa-brands fa-github"></i>
                                     </span>
@@ -183,7 +183,7 @@
                     Copyright © {{ site.time | date: "%Y" }} <b>{{ site.name }}</b> | <a href="{{ site.baseurl }}/privacy-policy.html" target="_blank">Privacy Policy</a> | Made with <b>Jekyll</b> and hosted on <b>GitHub Pages</b> | This website DOES NOT use cookies.
                 </div>
                 <div class="col-md-6 col-sm-12 text-center text-lg-right">    
-                    <i class="fa-brands fa-rust"></i> <a href=`<span id="release-url"></span>`><span id="current-release"></span></a>&nbsp;<i class="fa-solid fa-tag"></i>&nbsp;(latest)
+                    <!-- <i class="fa-brands fa-rust"></i> <a href=`<span id="release-url"></span>`><span id="current-release"></span></a>&nbsp;<i class="fa-solid fa-tag"></i>&nbsp;(latest) -->
                     <!-- - <i class="fa-solid fa-star"></i> <span id="repo-stars"></span> -->
                 </div>
             </div>
