--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -1056,8 +1056,8 @@ ul.tags li a:hover {
     right: 0;
     left: 0;
     z-index: 1000;
-    // background: rgba(22, 22, 23, .8);
-    background: rgba(0, 0, 0, 0.07);
+    background: #f7f8fa;
+    border-bottom: solid #d5dbe2 1px;
 }
 
 .outer {
